# srs-ner-nlp

./: .env.example  .gitignore  AGENTS.md  agents.md  main.py  pyproject.toml
.opencode/skills/minicpm5-finetune-trl/: SKILL.md
deploy/vllm/: README.md  benchmark.sh  serve.sh  vllm_benchmark_queryner.py  vllm_benchmark_queryner.sh  vllm_compare_fp8_bf16.sh  vllm_eval_queryner.py  vllm_eval_queryner.sh  vllm_serve_fp8_queryner.sh  vllm_serve_queryner.sh
metrics/: __init__.py  base.py  wandb.py
ner_datasets/: __init__.py  base.py  queryner.py  registry.py
ner_trainer/: __init__.py  base.py  config.py  gen_utils.py
ner_trainer/gliner2/: __init__.py  config.py  trainer.py
ner_trainer/hanlp/: __init__.py  config.py  trainer.py
ner_trainer/trl/: __init__.py  config.py  trainer.py
scripts/: check_env.sh  gliner2_train_queryner.sh  hanlp_train_queryner.sh  trl_full_train_queryner.sh  trl_grpo_train_queryner.sh  trl_train_queryner.sh  trl_unsloth_full_train_queryner.sh  trl_unsloth_train_queryner.sh  trl_validate_grpo_queryner.sh  trl_validate_queryner.sh  trl_validate_unsloth_queryner.sh  upload_model.sh
