[project]
name = "srs-ner-nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "wandb>=0.26.0",
    # ── 核心底层硬编码：确保任何后端都基于正确的 CUDA 12.4 构建 ──
    "torch",
    "torchvision",
    "torchaudio",
]

# ── 后端依赖组（互斥，按需安装）─────────────────────────────────
[dependency-groups]
hanlp = [
    "datasets>=4.8.4",
    "hanlp>=2.1.3",
    "gliner2>=1.3.1",
    "transformers>=4.12,<4.47",
]
trl = [
    "datasets>=4.8.4",
    "trl>=0.21",
    "peft>=0.13",
    "mergekit>=0.1.4",
    "transformers>=5.6,<6",
    "accelerate",
    "aiohttp>=3.10",
]
unsloth = [
    "datasets>=3.4.1,<4.4",
    "unsloth>=2026.5",
    "transformers==4.57.3",
    # unsloth 强烈建议显式固定其专用的 xformers 版本（配套 cu124）
    "xformers", 
]

[tool.uv]
default-groups = []
conflicts = [
    [
        { group = "hanlp" },
        { group = "trl" },
        { group = "unsloth" },
    ],
]

# ── 最佳实践：将标准 PyPI 设为默认，将 PyTorch 设为显式匹配 ──
# 这样普通包走普通源（极快），Torch 包由于名字匹配，会自动去 PyTorch 源抓取
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# 强制告诉 uv：遇到下面这几个包，必须且只能去 pytorch-cu124 源里下载
[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
xformers = { index = "pytorch-cu124" }